# wg_forge_mq_task

./: .gitignore  Dockerfile  README.md  compose.yml  definitions.json  docker-compose.yml  rabbitmq.conf
server/: pyproject.toml  script.py
