[tool.poetry]
name = "forgemqproject"
version = "0.1.0"
description = ""
authors = ["Daniiar Mukash uulu <d_mukashuulu@wargaming.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^9.5.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
